[gd_scene load_steps=33 format=3 uid="uid://lp6miq7txxe4"]

[ext_resource type="TileSet" uid="uid://bdnbatw8to8ft" path="res://tiles/scenes.tres" id="1_jss5v"]
[ext_resource type="Script" path="res://battle/win/base.gd" id="2_0cumr"]
[ext_resource type="Theme" uid="uid://dau5p77g7wf6n" path="res://theme.tres" id="2_ximhq"]
[ext_resource type="PackedScene" uid="uid://dbi15qnnbq08w" path="res://battle/win/award_ui.tscn" id="2_yogy2"]
[ext_resource type="Resource" uid="uid://yjv5p8wsctxa" path="res://resources/awards/empty.tres" id="4_heo2b"]
[ext_resource type="Resource" uid="uid://bt5o8suu0wfel" path="res://resources/awards/experiment.tres" id="5_otydv"]
[ext_resource type="Resource" uid="uid://b6sxtoymoyb5t" path="res://resources/awards/explore.tres" id="6_aey5f"]
[ext_resource type="Resource" uid="uid://cdnadbijmu76j" path="res://resources/awards/medicine.tres" id="7_scml7"]
[ext_resource type="Resource" uid="uid://drkstcal1whhd" path="res://resources/awards/pray.tres" id="8_jj3ei"]
[ext_resource type="Resource" uid="uid://tovtukgbjy3h" path="res://resources/awards/relax.tres" id="9_6o1d3"]
[ext_resource type="Resource" uid="uid://c82u5qon2do8n" path="res://resources/awards/smith.tres" id="10_8jai0"]
[ext_resource type="Resource" uid="uid://joxm0rkuptem" path="res://resources/awards/store.tres" id="11_sxcwy"]
[ext_resource type="Script" path="res://battle/win/smith.gd" id="13_wn68g"]
[ext_resource type="Script" path="res://battle/win/relax.gd" id="15_cwsce"]
[ext_resource type="Texture2D" uid="uid://dho1md7it5mn7" path="res://art/using/heart.png" id="16_inws6"]
[ext_resource type="PackedScene" uid="uid://c8gqbphovktmb" path="res://battle/win/statu_deck.tscn" id="16_tjxs0"]
[ext_resource type="Script" path="res://battle/win/store.gd" id="17_iewvx"]
[ext_resource type="PackedScene" uid="uid://bax5te8r3ku81" path="res://battle/win/skill_box.tscn" id="18_f3tj1"]
[ext_resource type="PackedScene" uid="uid://5r6r6mogq5u" path="res://battle/skill/skill_ui.tscn" id="18_y4fd5"]
[ext_resource type="Resource" uid="uid://4x48ar4xd8bl" path="res://resources/skills/aoe_attack.tres" id="20_xfwej"]
[ext_resource type="Resource" uid="uid://brjyeqycrr6al" path="res://resources/skills/block_attack.tres" id="21_1iim4"]
[ext_resource type="Resource" uid="uid://bt5q3i45oiub3" path="res://resources/skills/block_attack_2.tres" id="22_lbprc"]
[ext_resource type="Resource" uid="uid://dgiabc0rjbdb5" path="res://resources/skills/body_block.tres" id="23_yxu7b"]
[ext_resource type="Resource" uid="uid://cb7e2fgf4qufj" path="res://resources/skills/body_block_2.tres" id="24_fnvb3"]
[ext_resource type="Resource" uid="uid://cft77e3l4cqc0" path="res://resources/skills/holy_attack.tres" id="25_clwhf"]
[ext_resource type="Resource" uid="uid://ccey0h6np3qxs" path="res://resources/skills/super_block.tres" id="26_mspvv"]
[ext_resource type="Resource" uid="uid://blldocjji3tkp" path="res://resources/skills/purify_all.tres" id="27_gphms"]
[ext_resource type="Resource" uid="uid://josvicnawknp" path="res://resources/skills/holy_block_0.tres" id="28_mnuu7"]
[ext_resource type="Resource" uid="uid://bavlhhi6smp2l" path="res://resources/skills/triple_attack.tres" id="29_e6kdd"]
[ext_resource type="Resource" uid="uid://csh1k72oe31pm" path="res://resources/skills/sub_enhance_0.tres" id="30_5mml8"]
[ext_resource type="Resource" uid="uid://d0x78qr6cw5px" path="res://resources/skills/sub_heal.tres" id="31_2hcre"]
[ext_resource type="Resource" uid="uid://c60mkg773vjug" path="res://resources/skills/overlap_enhance.tres" id="32_wblt2"]

[node name="WinUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1897.0
offset_bottom = 1070.0

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-1174, -404)
scale = Vector2(9.1913, 8.44767)
tile_set = ExtResource("1_jss5v")
format = 2
layer_0/tile_data = PackedInt32Array(196616, 3145730, 1, 524296, 3145730, 2, 655380, 3276802, 3, 655368, 3145730, 3, 196628, 3276802, 1, 262164, 3276802, 2, 327700, 3276802, 2, 393236, 3276802, 2, 458772, 3276802, 2, 524308, 3276802, 2, 589844, 3276802, 2, 655379, 3211266, 3, 655378, 3211266, 3, 655377, 3211266, 3, 655376, 3211266, 3, 655375, 3211266, 3, 655374, 3211266, 3, 655373, 3211266, 3, 655372, 3211266, 3, 655371, 3211266, 3, 655370, 3211266, 3, 655369, 3211266, 3, 589832, 3145730, 2, 458760, 3145730, 2, 393224, 3145730, 2, 327688, 3145730, 2, 262152, 3145730, 2, 196617, 3211266, 1, 196618, 3211266, 1, 196619, 3211266, 1, 196620, 3211266, 1, 196621, 3211266, 1, 196622, 3211266, 1, 196623, 3211266, 1, 196624, 3211266, 1, 196625, 3211266, 1, 196626, 3211266, 1, 196627, 3211266, 1, 262153, 3211266, 2, 262154, 3211266, 2, 262155, 3211266, 2, 262156, 3211266, 2, 262157, 3211266, 2, 262158, 3211266, 2, 262159, 3211266, 2, 262160, 3211266, 2, 262161, 3211266, 2, 262162, 3211266, 2, 262163, 3211266, 2, 327699, 3211266, 2, 393235, 3211266, 2, 458771, 3211266, 2, 524307, 3211266, 2, 589843, 3211266, 2, 589842, 3211266, 2, 524306, 3211266, 2, 458770, 3211266, 2, 393234, 3211266, 2, 327698, 3211266, 2, 327697, 3211266, 2, 327696, 3211266, 2, 327695, 3211266, 2, 327694, 3211266, 2, 327693, 3211266, 2, 327692, 3211266, 2, 327691, 3211266, 2, 327690, 3211266, 2, 327689, 3211266, 2, 393225, 3211266, 2, 393226, 3211266, 2, 393227, 3211266, 2, 393228, 3211266, 2, 393229, 3211266, 2, 393230, 3211266, 2, 393231, 3211266, 2, 393232, 3211266, 2, 393233, 3211266, 2, 458769, 3211266, 2, 524305, 3211266, 2, 524304, 3211266, 2, 589840, 3211266, 2, 589839, 3211266, 2, 589838, 3211266, 2, 589837, 3211266, 2, 524301, 3211266, 2, 524300, 3211266, 2, 524299, 3211266, 2, 524298, 3211266, 2, 524297, 3211266, 2, 458761, 3211266, 2, 458762, 3211266, 2, 458763, 3211266, 2, 458764, 3211266, 2, 458765, 3211266, 2, 458766, 3211266, 2, 458767, 3211266, 2, 458768, 3211266, 2, 589841, 3211266, 2, 589836, 3211266, 2, 589835, 3211266, 2, 589834, 3211266, 2, 589833, 3211266, 2, 524302, 3211266, 2, 524303, 3211266, 2)
metadata/_edit_lock_ = true

[node name="Base" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_0cumr")

[node name="Label" type="Label" parent="Base"]
layout_mode = 0
offset_left = 650.0
offset_top = 99.0
offset_right = 1290.0
offset_bottom = 209.0
theme = ExtResource("2_ximhq")
theme_override_colors/font_color = Color(0, 0.0392157, 0.501961, 1)
theme_override_font_sizes/font_size = 80
text = "请选择一项奖励："

[node name="AwardsBox" type="HBoxContainer" parent="Base"]
layout_mode = 0
offset_left = 185.0
offset_top = 259.0
offset_right = 1693.0
offset_bottom = 806.0
theme_override_constants/separation = 20

[node name="b1" type="CenterContainer" parent="Base/AwardsBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="b2" type="CenterContainer" parent="Base/AwardsBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="b3" type="CenterContainer" parent="Base/AwardsBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Preload" type="HBoxContainer" parent="Base"]
layout_mode = 0
offset_left = 19.0
offset_top = -789.0
offset_right = 4047.0
offset_bottom = 62.0

[node name="AwardUI4" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("7_scml7")

[node name="AwardUI" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("4_heo2b")

[node name="AwardUI2" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("5_otydv")

[node name="AwardUI3" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("6_aey5f")

[node name="AwardUI5" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("8_jj3ei")

[node name="AwardUI6" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("9_6o1d3")

[node name="AwardUI8" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("11_sxcwy")

[node name="AwardUI7" parent="Base/Preload" instance=ExtResource("2_yogy2")]
layout_mode = 2
award = ExtResource("10_8jai0")

[node name="Skip" type="Button" parent="Base"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 0
offset_left = 1657.0
offset_top = 917.0
offset_right = 1757.0
offset_bottom = 977.0
theme = ExtResource("2_ximhq")
text = "跳过"

[node name="Smith" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 118.0
offset_top = 107.0
offset_right = 158.0
offset_bottom = 147.0
script = ExtResource("13_wn68g")

[node name="Dices" type="GridContainer" parent="Smith"]
layout_mode = 0
offset_left = 163.0
offset_top = 199.0
offset_right = 463.0
offset_bottom = 349.0
scale = Vector2(3, 3)
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 100
columns = 3

[node name="SmithDeck" type="VBoxContainer" parent="Smith"]
layout_mode = 0
offset_left = 1250.0
offset_top = 490.0
offset_right = 1454.0
offset_bottom = 744.0

[node name="TextureRect" type="TextureRect" parent="Smith/SmithDeck"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Smith/SmithDeck"]
layout_mode = 2

[node name="Recoin" type="Button" parent="Smith/SmithDeck/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("2_ximhq")
text = "重投"

[node name="Confirm" type="Button" parent="Smith/SmithDeck/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("2_ximhq")
disabled = true
text = "重铸"

[node name="Cancel" type="Button" parent="Smith"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 1499.0
offset_top = 800.0
offset_right = 1599.0
offset_bottom = 850.0
theme = ExtResource("2_ximhq")
text = "结束"

[node name="Relax" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_cwsce")

[node name="TileMap" type="TileMap" parent="Relax"]
position = Vector2(-21, -31)
scale = Vector2(2.50476, 2.8614)
tile_set = ExtResource("1_jss5v")
format = 2
layer_0/tile_data = PackedInt32Array(131079, 2949122, 4, 524295, 2949122, 6, 458759, 2949122, 5, 393223, 2949122, 5, 327687, 2949122, 5, 262151, 2949122, 5, 196615, 2949122, 5, 131080, 3014658, 4, 131081, 3014658, 4, 131082, 3014658, 4, 131083, 3014658, 4, 524296, 3014658, 6, 524297, 3014658, 6, 524298, 3014658, 6, 524299, 3014658, 6, 131084, 3080194, 4, 196620, 3080194, 5, 262156, 3080194, 5, 327692, 3080194, 5, 393228, 3080194, 5, 458764, 3080194, 5, 524300, 3080194, 6, 196616, 3014658, 5, 262152, 3014658, 5, 327688, 3014658, 5, 393224, 3014658, 5, 458760, 3014658, 5, 196617, 3014658, 5, 262153, 3014658, 5, 327689, 3014658, 5, 393225, 3014658, 5, 458761, 3014658, 5, 196618, 3014658, 5, 262154, 3014658, 5, 327690, 3014658, 5, 393226, 3014658, 5, 458762, 3014658, 5, 196619, 3014658, 5, 262155, 3014658, 5, 327691, 3014658, 5, 393227, 3014658, 5, 458763, 3014658, 5)

[node name="Label" type="Label" parent="Relax"]
layout_mode = 0
offset_left = 126.0
offset_top = 168.0
offset_right = 246.0
offset_bottom = 223.0
theme = ExtResource("2_ximhq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "当前："

[node name="HBoxContainer" type="HBoxContainer" parent="Relax"]
layout_mode = 0
offset_left = 283.0
offset_top = 458.0
offset_right = 1443.0
offset_bottom = 535.0
theme_override_constants/separation = 300

[node name="StatuDeck" parent="Relax/HBoxContainer" instance=ExtResource("16_tjxs0")]
layout_mode = 2

[node name="StatuDeck2" parent="Relax/HBoxContainer" instance=ExtResource("16_tjxs0")]
layout_mode = 2

[node name="StatuDeck3" parent="Relax/HBoxContainer" instance=ExtResource("16_tjxs0")]
layout_mode = 2

[node name="health" type="HBoxContainer" parent="Relax"]
layout_mode = 0
offset_left = 281.0
offset_top = 316.0
offset_right = 493.0
offset_bottom = 366.0

[node name="Icon" type="TextureRect" parent="Relax/health"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("16_inws6")

[node name="Label" type="Label" parent="Relax/health"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "最大生命"
uppercase = true

[node name="Data" type="Label" parent="Relax/health"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "50"

[node name="Cancel2" type="Button" parent="Relax"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 1617.0
offset_top = 907.0
offset_right = 1717.0
offset_bottom = 957.0
theme = ExtResource("2_ximhq")
text = "结束"

[node name="Store" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("17_iewvx")

[node name="money" type="Control" parent="Store"]
anchors_preset = 0
offset_left = 907.0
offset_top = 881.0
offset_right = 947.0
offset_bottom = 921.0

[node name="TileMap" type="TileMap" parent="Store/money"]
position = Vector2(-109, -73)
scale = Vector2(3, 3)
tile_set = ExtResource("1_jss5v")
format = 2
layer_0/tile_data = PackedInt32Array(131075, 2752514, 13)

[node name="Label" type="Label" parent="Store/money"]
layout_mode = 2
offset_left = 91.0
offset_top = 17.0
offset_right = 137.0
offset_bottom = 72.0
theme = ExtResource("2_ximhq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "99"

[node name="Label2" type="Label" parent="Store/money"]
layout_mode = 0
offset_left = -110.0
offset_top = 25.0
offset_right = 530.0
offset_bottom = 135.0
theme = ExtResource("2_ximhq")
theme_override_colors/font_color = Color(0, 0.0392157, 0.501961, 1)
theme_override_font_sizes/font_size = 30
text = "剩余金币："

[node name="TileMap2" type="TileMap" parent="Store"]
visible = false
position = Vector2(-1174, -404)
scale = Vector2(9.1913, 8.44767)
tile_set = ExtResource("1_jss5v")
format = 2
layer_0/tile_data = PackedInt32Array(196616, 2949122, 1, 524296, 2949122, 2, 655380, 3080194, 3, 655368, 2949122, 3, 196628, 3080194, 1, 262164, 3080194, 2, 327700, 3080194, 2, 393236, 3080194, 2, 458772, 3080194, 2, 524308, 3080194, 2, 589844, 3080194, 2, 655379, 3014658, 3, 655378, 3014658, 3, 655377, 3014658, 3, 655376, 3014658, 3, 655375, 3014658, 3, 655374, 3014658, 3, 655373, 3014658, 3, 655372, 3014658, 3, 655371, 3014658, 3, 655370, 3014658, 3, 655369, 3014658, 3, 589832, 2949122, 2, 458760, 2949122, 2, 393224, 2949122, 2, 327688, 2949122, 2, 262152, 2949122, 2, 196617, 3014658, 1, 196618, 3014658, 1, 196619, 3014658, 1, 196620, 3014658, 1, 196621, 3014658, 1, 196622, 3014658, 1, 196623, 3014658, 1, 196624, 3014658, 1, 196625, 3014658, 1, 196626, 3014658, 1, 196627, 3014658, 1, 262153, 3014658, 2, 262154, 3014658, 2, 262155, 3014658, 2, 262156, 3014658, 2, 262157, 3014658, 2, 262158, 3014658, 2, 262159, 3014658, 2, 262160, 3014658, 2, 262161, 3014658, 2, 262162, 3014658, 2, 262163, 3014658, 2, 327699, 3014658, 2, 393235, 3014658, 2, 458771, 3014658, 2, 524307, 3014658, 2, 589843, 3014658, 2, 589842, 3014658, 2, 524306, 3014658, 2, 458770, 3014658, 2, 393234, 3014658, 2, 327698, 3014658, 2, 327697, 3014658, 2, 327696, 3014658, 2, 327695, 3014658, 2, 327694, 3014658, 2, 327693, 3014658, 2, 327692, 3014658, 2, 327691, 3014658, 2, 327690, 3014658, 2, 327689, 3014658, 2, 393225, 3014658, 2, 393226, 3014658, 2, 393227, 3014658, 2, 393228, 3014658, 2, 393229, 3014658, 2, 393230, 3014658, 2, 393231, 3014658, 2, 393232, 3014658, 2, 393233, 3014658, 2, 458769, 3014658, 2, 524305, 3014658, 2, 524304, 3014658, 2, 589840, 3014658, 2, 589839, 3014658, 2, 589838, 3014658, 2, 589837, 3014658, 2, 524301, 3014658, 2, 524300, 3014658, 2, 524299, 3014658, 2, 524298, 3014658, 2, 524297, 3014658, 2, 458761, 3014658, 2, 458762, 3014658, 2, 458763, 3014658, 2, 458764, 3014658, 2, 458765, 3014658, 2, 458766, 3014658, 2, 458767, 3014658, 2, 458768, 3014658, 2, 589841, 3014658, 2, 589836, 3014658, 2, 589835, 3014658, 2, 589834, 3014658, 2, 589833, 3014658, 2, 524302, 3014658, 2, 524303, 3014658, 2)

[node name="Shelf" type="GridContainer" parent="Store"]
layout_mode = 0
offset_left = 182.0
offset_top = 149.0
offset_right = 1682.0
offset_bottom = 1079.0
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 50
columns = 3

[node name="b1" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b2" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b3" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b4" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b5" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b6" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b7" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b8" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="b9" parent="Store/Shelf" instance=ExtResource("18_f3tj1")]
visible = false
layout_mode = 2

[node name="SkillTemplate" type="GridContainer" parent="Store" groups=["skill_template"]]
layout_mode = 0
offset_left = 2020.0
offset_top = 42.0
offset_right = 2824.0
offset_bottom = 1278.0
columns = 2

[node name="SkillUI" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("20_xfwej")

[node name="SkillUI2" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("21_1iim4")

[node name="SkillUI3" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("22_lbprc")

[node name="SkillUI4" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("23_yxu7b")

[node name="SkillUI5" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("24_fnvb3")

[node name="SkillUI6" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("25_clwhf")

[node name="SkillUI7" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("26_mspvv")

[node name="SkillUI8" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("27_gphms")

[node name="SkillUI9" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("28_mnuu7")

[node name="SkillUI10" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("29_e6kdd")

[node name="SkillUI11" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("30_5mml8")

[node name="SkillUI12" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("31_2hcre")

[node name="SkillUI13" parent="Store/SkillTemplate" instance=ExtResource("18_y4fd5")]
layout_mode = 2
skill = ExtResource("32_wblt2")

[node name="Cancel" type="Button" parent="Store"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 1617.0
offset_top = 907.0
offset_right = 1717.0
offset_bottom = 957.0
theme = ExtResource("2_ximhq")
text = "结束"

[connection signal="pressed" from="Base/Skip" to="Base" method="_on_skip_pressed"]
[connection signal="pressed" from="Smith/SmithDeck/Buttons/Recoin" to="Smith" method="_on_recoin_pressed"]
[connection signal="pressed" from="Smith/SmithDeck/Buttons/Confirm" to="Smith" method="_on_confirm_pressed"]
[connection signal="pressed" from="Smith/Cancel" to="Smith" method="_on_cancel_pressed"]
[connection signal="pressed" from="Relax/Cancel2" to="Relax" method="_on_cancel_2_pressed"]
[connection signal="pressed" from="Store/Cancel" to="Store" method="_on_cancel_pressed"]
